--- a/Apply.html
+++ b/Apply.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-
+  <center>
 <h2>Application</h2>
 <p>Please enter all of your applicaiton info below</p>
 <form>
@@ -30,5 +30,6 @@ Reason for Application:<br>
       alert("Your information has been submitted and is being reviewed.")
     }
     </script>
+    </center>
 </body>
 </html>
