--- a/Apply.html
+++ b/Apply.html
@@ -16,7 +16,7 @@ Email:<br>
 Date of Birth:<br>
 <input type ="text" name="DateofBirth">
 <br>
-Major:<br>
+<a href="https://www.pgcc.edu/programs-courses/courses/?page=23">Major:</a><br>
 <input type = "text" name="Major">
 <br>
 Reason for Application:<br>
