--- a/Apply.html
+++ b/Apply.html
@@ -1,5 +1,5 @@
 <html>
-<body>
+<body style = "background-color:D1340A;">
   <center>
 <h2>Application</h2>
 <p>Please enter all of your applicaiton info below</p>
