--- a/Apply.html
+++ b/Apply.html
@@ -84,7 +84,7 @@
   <body>
     <center>
       <!--This is the beginning of the form that makes use of the style sheet-->
-  <form class="form-style-4" action="" method="post">
+  <form class="form-style-4" method="post">
   <h2><font color="#fff">Application</font></h2>
   <p><font color="#fff">Please enter all of your applicaiton info below</font></p>
   <!--Each section of the form is a label as that is what is covered by the style sheet-->
